package com.irina.myfirstgame.core;

import java.util.Map;

/**
 * Gère les préférences du joueur (volume, contrôles, etc.).
 * <p>
 * Stub pour une fonctionnalité future de sauvegarde/chargement des préférences.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Preferences {
    private float volume;
    private Map<String, Object> controls; // KeyCode type
    private String saveFile;
    
    public void load() {
    }
    
    public void save() {
    }
}

