' Generated by UML Generator
' Encoded: pLbPS-Cs4dxths3D4xrZgoPEKfke9jd8acnhHrU9acplYmeY8GanH300A5j9vR-d0V00GShZcTtQoeiXzW4q6byVW7yH4d6PxkcPU29nWZZQUo55GdIav6ITIZm8MHoGtx7tuMn78ko5X8SKdvrfAMz10j2xGQ5a_EZzSUPvbnMIVmwazt_0AfA4VteXnqZY7jwWb4ebvf-tFJMU_PdFUBVecNdMB8sZUyRtnxQd1qKK8UDupH2FGA_uhJYIx77RcyDVhZvXAYn5s-leKS-7PBW3hOGJYQ_LXwBkqgYBG0UrlGcNExRbADcHqD2KG9XoZcEf5sjx99RUJ-0AfObfCi92e2tG0_1Ml0LMd5BgSBLDRMz36TBA6yKlN7BN7qvNetuGT6xxgzvYrfaF9kDI-lkMaRVc2tRiERv6Q_3BcZ6AKGno6qG5RXBiHE3gDqa6QQBiR90iZLtqLij1_tuwcSrNzuFU_Awqz9iVhzojsT9t_S7jtTmI__238pxeJiQhOF2VVYdqtGzLaMcdrnkCRwrP785Wte6r7ag1Rpyq2JpM12uLJi5WlmgS2wyE6mtfDOaZ_nbWcO7pmjFG53Oi0Ti7HXGwtwT91C3NB5yKKB84G1M2p7ycaTnfteMtmsIxatN1ECBSBocNPkwxyZJz25E9iYrMry3IaXF5B4NqJL4gy0Z7gOb1y9f1Dmpw6q8r2rZuWeIHoYvAPCfnr0YS18o5kEY4aZ1GrBER3v2olbhZoRYl5HIjdAiucS8kd-CD1X-4U4dmSy8uE2Z_TQx3F2Kq6g8ZIwLVEm2VY6brXVEALPQ3oJPcUblsoN_5UMqO3t6NCe7jCqDIed0tK0wqoH5k8h-FY4Zi2ShZAhmXp84T64rL7jH7hzCNYoLd570vGib7awOklCdwLnpAd_MHeWE-8RJ8OONBOOR8Da89rYqmOM8Mb_X5GS5PQswePZ6Lqnr-oFQjDOeesvAmjOrUMYYD26i5IlJdmXgpZYadoh8EfRPnYfGjvCTeN-m6H3AoajfY-IL2Cxm5J9mGDSnCGHlh2hwsiKplDerlm8sxJapsI07Gtq05nhsK8nCnUGWN0g_2GGEdQqwSOcvEvGaVHG_IErY6vST1BF4MS-tOFGFWFrXWqOH7bm0W4svGQiQ_Ko6xb8HF3XDiaQDJcleq7KFDiMOXQfqg4P_mCPl4XtrqMLGapd9A45FxUrKWCzDtwTOM71wSZjx3WwBd3YceZnKg4KEyaRcXxXepbHPECHV9AOxQKmElE6oL3GDeg71iphaeSSl1RBxe36lr-SejkBcWMvh_wHRowQn_4wp6dL7VwdJUSGpPvi1N49WIIE9TJMSr7NOU-xEQPaBH4VCn85thR7NSZ92fAg_N71LZDmJJo0IY_gdec7F6XsYDQTlJWwucPNfisxcom67fGxyqGeDHG4TaP-RciW9GJ-DmTmkwDfL1tGiohrIa8Ki5KfMLSQPHvbo1OYAXf6ZE0T7KJYM5M5wTJbVujrKbNMVzgcPQsSHxrUs_gGZbEsq4urT3PpaPBgfAUqWhc2zrXMjGc2pxCu2RhS4Ec0FK-Z5QKnmrO0q0SY0GpyPqrRkfyVCeV0rOfWG75Dm7tRGPDIYCCTqT3f_MxANjwL_Nx4KnDnX7QnG-kGZMAAqws4BgXTUyWIz1i2hhJLZTickmnwztddydwAd0cu1VRUXLJvY89T4tqKeHYk0QkkigG-mGBDDI9J1Lkpv2CG21cw9EW8LQ--E6S27LSYrn16ZkHIkmP3-F8dsurIrK3hTk-uLNjnn0KBCxkuryXTLV0XqeXbFC1OiHXQEFyjl7tprVJS5TZRbgFdfOtGo6Jj99bfWVn_Yv9VSlrRJJdGo7Wm2kwojTvcorBgA_fHXEovk3xw0xlt8orc3QVuFMj-_-DydqRRdnQsftsKpa_OPv8ldcmzLt3ZzlCqu8t4o3bTMkE1TxnLrCNsNF5xEntUviwjc0O_0lW3wQDeOwWalW0JVpNalvpKzBpuohDkLU3Ne6WZyHQ7URhyhrmBPUaupJsvunhRnx5nrqs-tzpTsFKYBWqd27uaWBTHrAyqiPO7wcmrQfc5Sn5UDpW6GqAddcrStGrCkR-MLsck2XiJWdgt6O6r_5dkqEoLDiVBS6rfnKxhArotlbgI5_8MYNZnWwvIOenFT8k7UHoajO2lIxHU-_JlSfFv23ybJ3Yrz4q9x5KP2Wv_Y47UhYf5wJkYfFmMcfuUE_z5rjwzuKgtV2WgyG0jYfLBjITqjjVnOwJ10pPVDsSIo1ZqLBjwLClns8rXAhsdHLFj4KQTLSvwplIiTIYwx6aaDKDwphYjjSGzVF8L1pOFc0ridwrtRsfd5UHQAwpEV8kpxgtdfle_N2Ss_tJNY5m4WJzU9QkBpIAccsVcUr-CYyksgoAwjVMYrPeRxlzMEYPbdouAumoqY3U9x6CQPlxiakTphAhVSj7zalSIf4MXRNqeHWKVyOS7rlbkjdUAW_GlgHF6L5i6DCrdPwuI4Bb7RBGLdufAx0puX78qWOUq1XHmOftu13x9L3y20WWiJ6IuzEXp92BuytZ3_uB-KYHGI01O88EJ7vgCpgrJqBAAzMLNZbtXR2Lebon8cxs_-rsr7_IVd7vMMUsAtt0aMrIvXpWtFPLiFq6PPRX1nsPeaxNv6k7ORAoBy0uj8z_Gi
' URL: http://www.plantuml.com/plantuml/uml/pLbPS-Cs4dxths3D4xrZgoPEKfke9jd8acnhHrU9acplYmeY8GanH300A5j9vR-d0V00GShZcTtQoeiXzW4q6byVW7yH4d6PxkcPU29nWZZQUo55GdIav6ITIZm8MHoGtx7tuMn78ko5X8SKdvrfAMz10j2xGQ5a_EZzSUPvbnMIVmwazt_0AfA4VteXnqZY7jwWb4ebvf-tFJMU_PdFUBVecNdMB8sZUyRtnxQd1qKK8UDupH2FGA_uhJYIx77RcyDVhZvXAYn5s-leKS-7PBW3hOGJYQ_LXwBkqgYBG0UrlGcNExRbADcHqD2KG9XoZcEf5sjx99RUJ-0AfObfCi92e2tG0_1Ml0LMd5BgSBLDRMz36TBA6yKlN7BN7qvNetuGT6xxgzvYrfaF9kDI-lkMaRVc2tRiERv6Q_3BcZ6AKGno6qG5RXBiHE3gDqa6QQBiR90iZLtqLij1_tuwcSrNzuFU_Awqz9iVhzojsT9t_S7jtTmI__238pxeJiQhOF2VVYdqtGzLaMcdrnkCRwrP785Wte6r7ag1Rpyq2JpM12uLJi5WlmgS2wyE6mtfDOaZ_nbWcO7pmjFG53Oi0Ti7HXGwtwT91C3NB5yKKB84G1M2p7ycaTnfteMtmsIxatN1ECBSBocNPkwxyZJz25E9iYrMry3IaXF5B4NqJL4gy0Z7gOb1y9f1Dmpw6q8r2rZuWeIHoYvAPCfnr0YS18o5kEY4aZ1GrBER3v2olbhZoRYl5HIjdAiucS8kd-CD1X-4U4dmSy8uE2Z_TQx3F2Kq6g8ZIwLVEm2VY6brXVEALPQ3oJPcUblsoN_5UMqO3t6NCe7jCqDIed0tK0wqoH5k8h-FY4Zi2ShZAhmXp84T64rL7jH7hzCNYoLd570vGib7awOklCdwLnpAd_MHeWE-8RJ8OONBOOR8Da89rYqmOM8Mb_X5GS5PQswePZ6Lqnr-oFQjDOeesvAmjOrUMYYD26i5IlJdmXgpZYadoh8EfRPnYfGjvCTeN-m6H3AoajfY-IL2Cxm5J9mGDSnCGHlh2hwsiKplDerlm8sxJapsI07Gtq05nhsK8nCnUGWN0g_2GGEdQqwSOcvEvGaVHG_IErY6vST1BF4MS-tOFGFWFrXWqOH7bm0W4svGQiQ_Ko6xb8HF3XDiaQDJcleq7KFDiMOXQfqg4P_mCPl4XtrqMLGapd9A45FxUrKWCzDtwTOM71wSZjx3WwBd3YceZnKg4KEyaRcXxXepbHPECHV9AOxQKmElE6oL3GDeg71iphaeSSl1RBxe36lr-SejkBcWMvh_wHRowQn_4wp6dL7VwdJUSGpPvi1N49WIIE9TJMSr7NOU-xEQPaBH4VCn85thR7NSZ92fAg_N71LZDmJJo0IY_gdec7F6XsYDQTlJWwucPNfisxcom67fGxyqGeDHG4TaP-RciW9GJ-DmTmkwDfL1tGiohrIa8Ki5KfMLSQPHvbo1OYAXf6ZE0T7KJYM5M5wTJbVujrKbNMVzgcPQsSHxrUs_gGZbEsq4urT3PpaPBgfAUqWhc2zrXMjGc2pxCu2RhS4Ec0FK-Z5QKnmrO0q0SY0GpyPqrRkfyVCeV0rOfWG75Dm7tRGPDIYCCTqT3f_MxANjwL_Nx4KnDnX7QnG-kGZMAAqws4BgXTUyWIz1i2hhJLZTickmnwztddydwAd0cu1VRUXLJvY89T4tqKeHYk0QkkigG-mGBDDI9J1Lkpv2CG21cw9EW8LQ--E6S27LSYrn16ZkHIkmP3-F8dsurIrK3hTk-uLNjnn0KBCxkuryXTLV0XqeXbFC1OiHXQEFyjl7tprVJS5TZRbgFdfOtGo6Jj99bfWVn_Yv9VSlrRJJdGo7Wm2kwojTvcorBgA_fHXEovk3xw0xlt8orc3QVuFMj-_-DydqRRdnQsftsKpa_OPv8ldcmzLt3ZzlCqu8t4o3bTMkE1TxnLrCNsNF5xEntUviwjc0O_0lW3wQDeOwWalW0JVpNalvpKzBpuohDkLU3Ne6WZyHQ7URhyhrmBPUaupJsvunhRnx5nrqs-tzpTsFKYBWqd27uaWBTHrAyqiPO7wcmrQfc5Sn5UDpW6GqAddcrStGrCkR-MLsck2XiJWdgt6O6r_5dkqEoLDiVBS6rfnKxhArotlbgI5_8MYNZnWwvIOenFT8k7UHoajO2lIxHU-_JlSfFv23ybJ3Yrz4q9x5KP2Wv_Y47UhYf5wJkYfFmMcfuUE_z5rjwzuKgtV2WgyG0jYfLBjITqjjVnOwJ10pPVDsSIo1ZqLBjwLClns8rXAhsdHLFj4KQTLSvwplIiTIYwx6aaDKDwphYjjSGzVF8L1pOFc0ridwrtRsfd5UHQAwpEV8kpxgtdfle_N2Ss_tJNY5m4WJzU9QkBpIAccsVcUr-CYyksgoAwjVMYrPeRxlzMEYPbdouAumoqY3U9x6CQPlxiakTphAhVSj7zalSIf4MXRNqeHWKVyOS7rlbkjdUAW_GlgHF6L5i6DCrdPwuI4Bb7RBGLdufAx0puX78qWOUq1XHmOftu13x9L3y20WWiJ6IuzEXp92BuytZ3_uB-KYHGI01O88EJ7vgCpgrJqBAAzMLNZbtXR2Lebon8cxs_-rsr7_IVd7vMMUsAtt0aMrIvXpWtFPLiFq6PPRX1nsPeaxNv6k7ORAoBy0uj8z_Gi
' Generated on: 2025-11-23T21:00:34.561246

@startuml
skinparam classAttributeIconSize 0
hide circle

class UiSkinFactory {
  -UiSkinFactory()
  +{static} createDefaultSkin(): Skin
}

class HUD {
  -boundWormy: Wormy
  -scoreboard: Scoreboard
  -time: Timer
  -assets: Assets
  -batch: SpriteBatch
  -hudCamera: OrthographicCamera
  -currentScore: int = 0
  -helpMessage: String = null
  -helpMessageTimer: float = 0f
  -{static} HELP_MESSAGE_DURATION: float = 5.0f
  -helpMessageShownBaby: boolean = false
  -helpMessageShownAdult: boolean = false
  -helpMessageShownSuper: boolean = false
  -{static} HUD_VIEWPORT_WIDTH: float = 1920f
  -{static} HUD_VIEWPORT_HEIGHT: float = 1080f
  -{static} ICON_SIZE: float = 48f
  -{static} PADDING: float = 18f
  -{static} START_X: float = 30f
  -{static} START_Y: float = 30f
  --
  +HUD(assets: Assets, batch: SpriteBatch)
  +bind(worm: Wormy, scores: Scoreboard): void
  +updateScore(score: int): void
  +resize(width: int, height: int): void
  +render(): void
  -updateHelpMessage(delta: float): void
  +resetHelpMessages(): void
}

class PauseMenu {
  -stage: Stage
  -skin: Skin
  -inputCaptured: boolean = false
  -pendingAction: PauseAction = PauseAction.NONE
  -paused: boolean
  --
  +PauseMenu(referenceViewport: Viewport)
  -buildLayout(): void
  +update(isPaused: boolean): PauseAction
  +render(ignored: SpriteBatch): void
  +resize(width: int, height: int): void
  +forceClose(): void
  -attachInput(): void
  -detachInput(): void
  +dispose(): void
}

class Preferences {
  -volume: float
  -controls: Map<String, Object>
  -saveFile: String
  --
  +load(): void
  +save(): void
}

class Assets {
  -textures: Map<String, Texture>
  -sounds: Map<String, com.badlogic.gdx.audio.Sound>
  --
  +Assets()
  +loadAll(): void
  +loadTexture(name: String): Texture
  +getTexture(name: String): Texture
  +getTextureRegion(name: String): TextureRegion
  +getSound(name: String): com.badlogic.gdx.audio.Sound
  +getGunFlashAnimation(frameDuration: float): Animation
  +dispose(): void
}

class InputController {
  -keysDown: Set<Integer>
  -mouseX: float
  -mouseY: float
  -mousePressed: boolean
  -mouseJustClicked: boolean
  -lastMousePressed: boolean
  --
  +InputController()
  +update(): void
  +isKeyPressed(keyCode: int): boolean
  +isDown(keyCode: int): boolean
  +isClicked(): boolean
  +isJustClicked(): boolean
  +getMouseX(): float
  +getMouseY(): float
  +isLeftPressed(): boolean
  +isRightPressed(): boolean
  +isUpPressed(): boolean
  +isDownPressed(): boolean
}

class MenuScreen {
  -{static} VIRTUAL_WIDTH: float = 1280f
  -{static} VIRTUAL_HEIGHT: float = 720f
  -{static} PREFS_NAME: String = "revolvr_settings"
  -{static} PREF_PLAYER_NAME: String = "playerName"
  -game: Main
  -stage: Stage
  -skin: Skin
  -nameField: TextField
  -errorLabel: Label
  -preferences: Preferences
  --
  +MenuScreen(game: Main)
  +show(): void
  -buildLayout(): void
  -launchGame(): void
  -openSettings(): void
  -loadStoredName(): String
  -sanitizeName(value: String): String
  +render(delta: float): void
  +resize(width: int, height: int): void
  +pause(): void
  +resume(): void
  +hide(): void
  +dispose(): void
}

class SettingsScreen {
  -{static} PREFS_NAME: String = "revolvr_settings"
  -{static} PREF_VOLUME: String = "masterVolume"
  -{static} PREF_OVERLAY: String = "overlayEnabled"
  -game: Main
  -previousScreen: Screen
  -stage: Stage
  -skin: Skin
  -preferences: Preferences
  -volumeSlider: Slider
  -overlayCheckbox: CheckBox
  -feedbackLabel: Label
  --
  +SettingsScreen(game: Main, previousScreen: Screen)
  +show(): void
  -buildLayout(): void
  -saveSettings(): void
  -goBack(): void
  +render(delta: float): void
  +resize(width: int, height: int): void
  +pause(): void
  +resume(): void
  +hide(): void
  +dispose(): void
}

class GameOverScreen {
  -game: Main
  -isVictory: boolean
  -deathCause: String
  -playerName: String
  -scoreManager: com.irina.myfirstgame.systems.ScoreManager
  -stage: Stage
  -skin: Skin
  --
  +GameOverScreen(game: Main, isVictory: boolean, deathCause: String, playerName: String, scoreManager: com.irina.myfirstgame.systems.ScoreManager)
  +show(): void
  -buildLayout(): void
  -getPersonalizedMessage(): String
  +render(delta: float): void
  +resize(width: int, height: int): void
  +pause(): void
  +resume(): void
  +hide(): void
  +dispose(): void
}

class PlayScreen {
  -{static} TMX_FILE: String = "mapVeryNew.tmx"
  -{static} COLLISION_LAYER: String = "Calque de Tuiles 2"
  -{static} PIPE_LAYER: String = "Calque de Tuiles 3"
  -{static} PREFS_NAME: String = "revolvr_settings"
  -{static} PREF_OVERLAY: String = "overlayEnabled"
  -{static} PREF_PLAYER_NAME: String = "playerName"
  -{static} V_WIDTH: int = 1024
  -{static} V_HEIGHT: int = 1024
  -{static} FPS_H: float = 8f
  -{static} FPS_UP: float = 8f
  -{static} FPS_TURN: float = 12f
  -game: Main
  -requestedPlayerName: String
  -activePlayerName: String
  -preferences: Preferences
  -batch: SpriteBatch
  -world: World
  -pieKilled: boolean = false
  -deathCause: String = null
  -player: Player
  -inputController: InputController
  -collisionHandler: CollisionHandler
  -assets: Assets
  -mapRenderer: OrthogonalTiledMapRenderer
  -tiledMap: TiledMap
  -pipeLayer: TiledMapTileLayer
  -overlayEnabled: boolean = true
  -wobbleTime: float
  -isPaused: boolean = false
  -pauseMenu: PauseMenu
  -spaceWasPressed: boolean = false
  -hud: HUD
  -scoreManager: com.irina.myfirstgame.systems.ScoreManager
  -survivalTimer: float = 0f
  -diamondSpawned: boolean = false
  -lastWormClass: Class<?>
  -gunFlashAnimation: Animation
  -gunFlashPlaying: boolean
  -gunFlashAngle: float
  -gunFlashPosition: com.irina.myfirstgame.entities.valueobjects.Vector2
  --
  +PlayScreen()
  +PlayScreen(game: Main, playerName: String)
  +show(): void
  -initializeGame(): void
  -extractTiledMap(mapObj: Object): TiledMap
  -getTileLayerByName(map: TiledMap, name: String): TiledMapTileLayer
  -setupBabyAnimations(): void
  -setupAdultAnimations(adult: Adult): void
  -setupSuperAnimations(superWorm: Super): void
  -placePlayerInTunnel(): void
  +render(delta: float): void
  -handlePauseAction(action: PauseMenu.PauseAction): void
  -restartGame(): void
  -renderEntities(): void
  -update(dt: float): void
  -handleShoot(superWorm: Super, angle: float): void
  -blockDownwardMovementAtSurface(): void
  -constrainPlayerY(): void
  -getMaxYForX(x: float): float
  -persistOverlayPreference(): void
  -resolvePlayerName(): String
  -sanitizeName(candidate: String): String
  +resize(width: int, height: int): void
  +pause(): void
  +resume(): void
  +hide(): void
  +dispose(): void
}

HUD *-- Assets
MenuScreen *-- Preferences
SettingsScreen *-- Preferences
PlayScreen *-- Preferences
PlayScreen *-- InputController
PlayScreen *-- Assets
PlayScreen *-- PauseMenu
PlayScreen *-- HUD
@enduml